# stories-xbot

./: .cursor.json  .cursorignore  .env.sample  .gitignore  .pylintrc  README.md  alembic.ini2  main.py  pyproject.toml  repository.py  requirements.txt
.cursor/: instructions.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  initialize.sh  post_create.sh  update_content.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: validate.yml
alembic/: env.py
alembic/versions/: 00206fd4c7fd_new_migration.py  20240128_add_indexes.py  20240128_init.py  20240128_initial.py  23c11b1222fb_rename_tables_to_singular_and_update_.py  5845489c3a54_init.py  5bd1cef83dc7_updates.py  6f0f25d9402f_updatess.py  83f1e3033337_rename_chats_table_to_chat.py  89f629cc34db_initial.py  a1022b09505d_add_primary_keys_to_profile_requests_.py  a4d1be680c25_update_seqs.py  a685ab32efaa_initial.py  bf491788b3b8_fixes.py  convert_timestamps_to_datetime.py
bot/: bot.py  filters.py  handlers.py  middlewares.py
config/: __init__.py  config.py  logger.py  supabase.py
db/: models.py  redis.py  repository.py  schemas.py  session.py  supabase.py
locales/: en.json  ru.json  zh.json
scripts/: migrate.py
src/: main.py  userbot.session.orig
src/bot/: __init__.py  bot.py  filters.py  handlers.py  middlewares.py
src/config/: logger.py  settings.py  supabase.py
src/db/: __init__.py  models.py  redis.py  repository.py  schemas.py  session.py
src/locales/: ru.json
src/models/: __init__.py  base.py  bug_report.py  chat.py  download_queue.py  invalid_link_violation.py  monitor.py  story.py  task.py  user.py
src/scripts/: migrate.py
src/services/: __init__.py  base.py  chat.py  repository.py  user.py  userbot.py
src/userbot/: __init__.py  userbot.py
src/utils/: i18n.py
tests/: test_bot_components.py  test_logger.py  test_repository.py
typings/asyncpg/: compat.pyi  connresource.pyi
userbot/: userbot.py
