[project]
name = "py-storiesxbot"
version = "0.1.0"
description = "Telegram bot and userbot implementation using PyrogramMod and aiogram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyrogrammod>=1.0.0",
  "aiogram>=3.0.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "loguru>=0.7.0",
  "alembic>=1.12.0",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.9.1",
  "supabase>=2.3.0",
  "postgrest>=0.13.0",
  "gotrue>=1.1.0",
  "realtime>=1.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.hatch.build.targets.wheel]
packages = ["src"]
